--- a/plugins/canary/docker-compose.yml
+++ b/plugins/canary/docker-compose.yml
@@ -1,6 +1,16 @@
 version: '3'
 
 services:
+  postgres2:
+    container_name: canary_postgres2
+    image: postgres:9.6
+    restart: on-failure
+    environment:
+      POSTGRES_PASSWORD: kong
+      POSTGRES_DB: kong
+      POSTGRES_USER: kong
+    networks:
+      - code-network
   postgres:
     container_name: canary_postgres
     image: postgres:9.6
@@ -50,8 +60,34 @@ services:
     ports:
       - '8000:8000'
 #      - '8443:8443'
-      - '8001:8001'
+#      - '8001:8001'
 #      - '8444:8444'
+    volumes:
+      - ./plugin:/usr/local/share/lua/5.1/kong/plugins/canary_custom
+      - ./constants.lua:/usr/local/share/lua/5.1/kong/constants.lua
+#    command:
+#      - kong
+#      - migrations
+#      - bootstrap
+  kong2:
+    container_name: canary_kong2
+    image: kong:1.4.2-alpine
+    networks:
+      - code-network
+    depends_on:
+      - postgres2
+    environment:
+      KONG_DATABASE: postgres
+      KONG_PG_HOST: postgres2
+      KONG_PG_USER: kong
+      KONG_PG_PASSWORD: kong
+      KONG_PROXY_ACCESS_LOG: /dev/stdout
+      KONG_ADMIN_ACCESS_LOG: /dev/stdout
+      KONG_PROXY_ERROR_LOG: /dev/stderr
+      KONG_ADMIN_ERROR_LOG: /dev/stderr
+      KONG_ADMIN_LISTEN: 0.0.0.0:8001, 0.0.0.0:8444 ssl
+    ports:
+      - '8003:8000'
     volumes:
       - ./plugin:/usr/local/share/lua/5.1/kong/plugins/canary_custom
       - ./constants.lua:/usr/local/share/lua/5.1/kong/constants.lua
